@@ -256,7 +256,48 @@ namespace QA40xPlot.Converters
 		}
 	}
 
-		public class TimeFormatter : IValueConverter
+	public class WattFormatter : IValueConverter
+	{
+		public object Convert(object value, Type targetType, object parameter, System.Globalization.CultureInfo culture)
+		{
+			if (value == null || value == DependencyProperty.UnsetValue)
+				return string.Empty;
+			// three arguments are:
+			// voltage, reference voltage, usepercent
+			string rslt = string.Empty;
+			{
+				double dv = (double)value;
+				var adv = Math.Abs(dv);
+				if (adv >= 100)
+				{
+					rslt = dv.ToString("0.#") + " W";
+				}
+				else if (adv >= .099)
+				{
+					rslt = dv.ToString("0.###") + " W";
+				}
+				else if (adv >= 1e-4)
+				{
+					rslt = (1000 * dv).ToString("G3") + " mW";
+				}
+				else if (adv >= 1e-7)
+				{
+					rslt = (1000000 * dv).ToString("G3") + " μW";
+				}
+				else
+				{
+					rslt = (1e9 * dv).ToString("G3") + " nW";
+				}
+			}
+			return rslt;
+		}
+		public object ConvertBack(object value, Type targetType, object parameter, System.Globalization.CultureInfo culture)
+		{
+			return Binding.DoNothing;
+		}
+	}
+
+	public class TimeFormatter : IValueConverter
 		{
 			public object Convert(object value, Type targetType, object parameter, System.Globalization.CultureInfo culture)
 			{
