@@ -21,8 +21,18 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <Label Content="Test Information" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" 
-                       HorizontalAlignment="Center" VerticalContentAlignment="Center" />
+                <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Content="Test Information" Grid.Column="0"
+                       HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    <Button Content="Update Source" Command="{Binding DoUpdateSource}" Grid.Column="1"
+                    ToolTip="Optional: Save the test info changes to the original source file."
+                    Visibility="{Binding AllowCopy, Converter={StaticResource BoolNotVisConverter}, ElementName=MyTabAbout}"
+                    HorizontalAlignment="Right" Margin="0,5,0,0" />
+                </Grid>
                 <Label Content="{Binding FileName}" VerticalContentAlignment="Center" HorizontalAlignment="Center"
                     Visibility="{Binding AllowCopy, Converter={StaticResource BoolNotVisConverter}, ElementName=MyTabAbout}"
                          Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" />
