@@ -9,6 +9,7 @@ v 1.2.6 asdfasdf
 - have scope use bin-center frequencies
 - add ability to edit Gotten plot name
 - add a default data folder setting
+- finally fix phase upwrapping
 v 1.2.5 1/18/2026
 - add space to run/start/get... buttons
 - update mouse cursor in frequency response test when test runs
